src/iac/1-app/0-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csp-app
  template:
    metadata:
      labels:
        app: csp-app
    spec:
      containers:
        - name: csp-app
          image: 'iopolestarpocacr.azurecr.io/csp-app:32711ae0cac28ae29f486cad894c4efaeeabe7c1' #TODO tag 
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 1280Mi
            requests:
              memory: 500Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: '/health'
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 50
          readinessProbe:
            httpGet:
              path: '/health'
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 50
