src/iac/1-app/1-pod-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csp-app
  template:
    metadata:
      labels:
        app: csp-app
    spec:
#      serviceAccountName: 'workload-identity-sa'
      containers:
        - name: csp-app
          image: 'antcstestacr.azurecr.io/csp-app:f7d32184f696d54c5b0236c41770a51b2e629114' #TODO tag 
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 1280Mi
            requests:
              memory: 500Mi
              cpu: "0.2"
          livenessProbe:
            httpGet:
              path: '/health'
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 50
          readinessProbe:
            httpGet:
              path: '/health'
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 50
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-workload-identity"
