src/iac/1-app/2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: csp-app
  labels:
    app: csp-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
      name: external
  selector:
    app: csp-app
