src/iac/1-app/2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'csp-app-ingress'
  namespace: 'default'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-buffering: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
spec:
  tls:
    - hosts:
        - 'polestar-poc.antwerp.io-internal.dev ' #TODO fix a domain
      secretName: 'secret' #TODO fix secret
  rules:
    - host: 'polestar-poc.antwerp.io-internal.dev' #TODO fix domain again
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 'csp-app'
                port:
                  number: 80
