src/iac/1-app/3-ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'csp-app-ingress'
  namespace: 'default'
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    spec.ingressClassName: nginx
    nginx.org/proxy-buffering: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
spec:
  tls:
    - hosts:
        - 'conversationalsearch-test.antwerp.io-internal.dev'
      secretName: 'letsencrypt-prod' 
  rules:
    - host: 'conversationalsearch-test.antwerp.io-internal.dev'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 'csp-app'
                port:
                  number: 80
